--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "skynet",
-  "homepage": "https://mpsinfoservices.com/skynet-react-mps",
+  "homepage": "https://saha123.github.io/skynetreact",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
@@ -16,6 +16,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
